hin_morph/ERR_HND
../source_code/fgetnumber_long.c: In function 'fgetnumber':
../source_code/fgetnumber_long.c:20:2: warning: format '%ld' expects argument of type 'long int *', but argument 3 has type 'int *' [-Wformat=]
  sscanf(temp,"%ld",s_ptr);
  ^
../source_code/getline.c:4:1: error: conflicting types for 'getline'
 getline(s_ptr)
 ^
In file included from ../source_code/getline.c:1:0:
/usr/include/stdio.h:678:20: note: previous declaration of 'getline' was here
 extern _IO_ssize_t getline (char **__restrict __lineptr,
                    ^
../source_code/my_cut.c: In function 'main':
../source_code/my_cut.c:22:1: warning: incompatible implicit declaration of built-in function 'exit' [enabled by default]
 exit(-1);
 ^
../source_code/my_cut.c:40:1: warning: incompatible implicit declaration of built-in function 'exit' [enabled by default]
 exit (-1);
 ^
../source_code/recexe.c: In function 'main':
../source_code/recexe.c:14:3: warning: incompatible implicit declaration of built-in function 'exit' [enabled by default]
   exit(-1);
   ^
../source_code/recexe.c:16:2: warning: incompatible implicit declaration of built-in function 'strcpy' [enabled by default]
  strcpy(shellcmd,argv[2]);
  ^
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_dbm.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_dbm.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: 1: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/tools/my_bin/comp_lex_gnu.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
create_dbm.c: In function 'main':
create_dbm.c:30:1: warning: incompatible implicit declaration of built-in function 'exit' [enabled by default]
 exit(1);
 ^
create_dbm.c:44:13: warning: incompatible implicit declaration of built-in function 'strlen' [enabled by default]
 tag.dsize = strlen(key);
             ^
create_dbm.c:51:1: warning: incompatible implicit declaration of built-in function 'exit' [enabled by default]
 exit(0);
 ^
./prp_noun_rt.sh: 1: ./prp_noun_rt.sh: flex: not found
cc: error: lex.yy.c: No such file or directory
./mk_dbm_dict_gnu.sh: 2: test: -a: unexpected operator
Hash %LEX missing the % in argument 1 of dbmopen() at /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/flat_dbm_conversion/create_dbm_dict.pl line 5.
Hash %LEX missing the % in argument 1 of dbmclose() at /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/flat_dbm_conversion/create_dbm_dict.pl line 12.
cc: error: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/tools/mt/bin/getline.o: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph_data_conv/main2.sh: 4: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph_data_conv/main2.sh: ./cvt.out: not found
sort: cannot read: lex.c: No such file or directory
rm: cannot remove 'lex.c': No such file or directory
cc: error: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/tools/mt/bin/getline.o: No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph_data_conv/main2.sh: 12: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph_data_conv/main2.sh: ./gen_fe_val_off.out: not found
suff_gen.c: In function 'main':
suff_gen.c:31:9: warning: incompatible implicit declaration of built-in function 'exit' [enabled by default]
         exit(1);
         ^
suff_gen.c:38:9: warning: incompatible implicit declaration of built-in function 'exit' [enabled by default]
         exit(1);
         ^
suff_gen.c:80:8: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
    if ((char *)strcmp(argv[1],"1")==NULL) 
        ^
suff_gen.c:83:9: warning: cast to pointer from integer of different size [-Wint-to-pointer-cast]
     if ((char *)strcmp(argv[1],"2") == NULL) 
         ^
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph_data_conv/suff.sh: 4: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph_data_conv/suff.sh: /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph_data_conv/suff_add_ptr.out: not found
wc: suff_info.c: No such file or directory
cat: suff_info.c: No such file or directory
rm: cannot remove 'suff_info.c': No such file or directory
wc: feature_value: No such file or directory
sed: can't read feature_value: No such file or directory
rm: cannot remove 'cvt.out': No such file or directory
rm: cannot remove 'gen_fe_val_off.out': No such file or directory
rm: cannot remove 'offset': No such file or directory
rm: cannot remove 'feature_value': No such file or directory
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph/Avy_srch.c: In function 'AVY_srch':
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph/Avy_srch.c:17:16: warning: conflicting types for built-in function 'malloc' [enabled by default]
 char *avy_ptr,*malloc(),dummy_avy[AVYWORDSIZE];
                ^
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph/new_build_struct_hin.c: In function 'build_struct':
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/morph/new_build_struct_hin.c:15:25: warning: incompatible implicit declaration of built-in function 'malloc' [enabled by default]
 tag= (struct lex_info *)malloc(sizeof(struct lex_info));
                         ^
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/hindi/morph/c_data/feature_value.c:3:14: error: 'TOTAL_FE_INFO' undeclared here (not in a function)
 char fe_info[TOTAL_FE_INFO][INFOSIZE]={
              ^
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/hindi/morph/c_data/feature_value.c:4:1: error: empty scalar initializer
 };
 ^
/home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/hindi/morph/c_data/feature_value.c:4:1: error: (near initialization for 'fe_info')
make: *** [feature_value.o] Error 1
./data_compile.sh: 7: test: -a: unexpected operator
./data_compile.sh: 11: test: -a: unexpected operator
Hash %LEX missing the % in argument 1 of dbmopen() at /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/flat_dbm_conversion/create_dbm_suff.pl line 5.
Hash %LEX missing the % in argument 1 of dbmclose() at /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/flat_dbm_conversion/create_dbm_suff.pl line 12.
Hash %LEX missing the % in argument 1 of dbmopen() at /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/flat_dbm_conversion/create_dbm_uword.pl line 5.
Hash %LEX missing the % in argument 1 of dbmclose() at /home/arushi/Desktop/MajorProject/temp_pr/IRE_MajorProject/hin_morph/anusAraka/com/flat_dbm_conversion/create_dbm_uword.pl line 12.
